Added input field for dynamic generation of qr code

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/style.css">
     <title>QR Code Generator</title>
 </head>
 <body>
     <canvas id="qrcodeCanvas"></canvas>
     <br>
+    <input type="url" id="urlInput" value="https://example.com">
+    <br>
     <button id="copyBtn">Copy QR Code</button>
     <button id="downloadBtn">Download QR Code</button>
-    
-    <script type="module" src="script.js"></script>
+
+    <script type="module" src="resources/script.js"></script>
 </body>
