--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <canvas id="qrcodeCanvas"></canvas>
-    <br>
     <input type="url" id="urlInput" value="https://example.com">
-    <br>
-    <button id="copyBtn">Copy QR Code</button>
-    <button id="downloadBtn">Download QR Code</button>
+    <div>
+        <button id="copyBtn"><img src="resources/icons/content_copy_24dp_C1BDED_FILL0_wght400_GRAD0_opsz24.png" alt="Copy QR-Code"></button>
+        <button id="downloadBtn"><img src="resources/icons/download_24dp_C1BDED_FILL0_wght400_GRAD0_opsz24.png" alt="Download QR-Code"></button>
+    </div>
 
     <script type="module" src="resources/script.js"></script>
 </body>
