Website now looks absolutley stunning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>QR Code Generator</title>
 </head>
 <body>
+    <h1>Stephan's <span id="title-span"><u>GRATIS</u></span></h1> 
+    <h2>QR-Code Generator</h1>
     <canvas id="qrcodeCanvas"></canvas>
     <input type="url" id="urlInput" value="https://example.com">
     <div>
