--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <head>
-
-</head>
-<html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/style.css">
@@ -21,3 +17,4 @@
 
     <script type="module" src="resources/script.js"></script>
 </body>
+</html>
