Small addition to content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Stephan's <span id="title-span"><u>GRATIS</u></span></h1> 
     <h2>QR-Code Generator</h1>
+    <h3>Für Mailin ❤️</h3>
     <canvas id="qrcodeCanvas"></canvas>
     <input type="url" id="urlInput" value="https://example.com">
     <div>
